--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@capacitor/ios": "5.7.3",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/vue": "^7.0.0",
-    "@ionic/vue-router": "^7.0.0",
+    "@ionic/vue": "^8.0.0",
+    "@ionic/vue-router": "^8.0.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.8",
     "ionicons": "^7.0.0",
     "pinia": "^2.1.7",
+    "qs": "^6.12.0",
     "vee-validate": "^4.12.6",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0",
