--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@capacitor/app": "5.0.7",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/core": "5.7.3",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.7.3",
